--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,6 +14,9 @@
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5918874419248577" crossorigin="anonymous"></script>
     
+    <!-- Skimlinks -->
+    <script type="text/javascript" src="https://s.skimresources.com/js/293633X1780866.skimlinks.js"></script>
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F4GP5ZEMD1"></script>
     <script>
@@ -94,8 +97,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            right: 0;
+            bottom: 0;
             background: linear-gradient(135deg, #2d5a27, #4CAF50);
             opacity: 0;
             transition: opacity 0.3s ease;
