--- a/about-us.html
+++ b/about-us.html
@@ -310,7 +310,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <a href="index.html" class="logo">🌱 CarbonChecks</a>
+                <a href="index.html" class="logo">CarbonChecks</a>
                 <nav>
                     <ul class="nav-links">
                         <li><a href="index.html#calculator">Calculator</a></li>
