--- a/index.html
+++ b/index.html
@@ -1673,6 +1673,7 @@
                     <ul class="nav-links">
                         <li><a href="#calculator">Calculator</a></li>
                         <li><a href="#blog">Articles</a></li>
+                        <li><a href="/blog/">Blog</a></li>
                         <li><a href="about-us.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -1681,6 +1682,7 @@
                 <div class="mobile-menu" id="mobileMenu">
                     <a href="#calculator">Calculator</a>
                     <a href="#blog">Articles</a>
+                    <a href="/blog/">Blog</a>
                     <a href="about-us.html">About</a>
                     <a href="contact.html">Contact</a>
                 </div>
