--- a/index.html
+++ b/index.html
@@ -1902,9 +1902,9 @@
                     <div class="stock-warning">🔥 Limited Time Offer!</div>
                     <div class="affiliate-buttons">
                         <a href="https://www.amazon.com/s?k=complete+solar+panel+kit+system&ref=as_li_ss_tl" class="affiliate-btn primary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Amazon')">🛒 Amazon Solar Kits</a>
-                        <a href="https://www.renogy.com/solar-panel-kits/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Renogy')">☀️ Renogy</a>
-                        <a href="https://www.goalzero.com/solar-panels/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_GoalZero')">🔋 Goal Zero</a>
-                        <a href="https://www.ecoflow.com/solar-panels" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_EcoFlow')">⚡ EcoFlow</a>
+e                        <a href="https://www.renogy.com/solar-panels/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Renogy')">☀️ Renogy</a>
+                        <a href="https://www.ecoflow.com/us/solar-panels" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_EcoFlow')">⚡ EcoFlow</a>
+                        <a href="https://www.jackery.com/collections/solar-panels" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Jackery')">🔋 Jackery</a>
                     </div>
                 </div>
                 
@@ -1918,9 +1918,9 @@
                     <div class="stock-warning">⚡ Energy Star Certified!</div>
                     <div class="affiliate-buttons">
                         <a href="https://www.amazon.com/s?k=smart+thermostat+nest+honeywell+ecobee&ref=as_li_ss_tl" class="affiliate-btn primary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Amazon')">🛒 Amazon Thermostats</a>
-                        <a href="https://store.google.com/us/category/thermostats" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_GoogleNest')">🌡️ Google Nest</a>
                         <a href="https://www.ecobee.com/smart-thermostats/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Ecobee')">🏠 Ecobee</a>
-                        <a href="https://www.honeywell.com/smart-thermostats" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Honeywell')">⚙️ Honeywell</a>
+                        <a href="https://www.honeywell.com/en-us/control-systems/smart-thermostats" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Honeywell')">⚙️ Honeywell</a>
+                        <a href="https://www.emerson.com/en-us/sensai-smart-thermostat" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Emerson')">🌡️ Emerson</a>
                     </div>
                 </div>
                 
@@ -1934,9 +1934,9 @@
                     <div class="stock-warning">🔥 Real-Time Monitoring!</div>
                     <div class="affiliate-buttons">
                         <a href="https://www.amazon.com/s?k=home+energy+monitor+smart+meter&ref=as_li_ss_tl" class="affiliate-btn primary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Amazon')">🛒 Amazon Monitors</a>
-                        <a href="https://www.sense.com/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Sense')">📊 Sense</a>
-                        <a href="https://www.emporiaenergy.com/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Emporia')">⚡ Emporia</a>
-                        <a href="https://www.neurio.com/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Neurio')">🔍 Neurio</a>
+                        <a href="https://sense.com/products/sense-energy-monitor" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Sense')">📊 Sense</a>
+                        <a href="https://www.emporiaenergy.com/products/vue-2-energy-monitor" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Emporia')">⚡ Emporia</a>
+                        <a href="https://www.p3international.com/products/p4400.html" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_KillAWatt')">🔍 Kill-A-Watt</a>
                     </div>
                 </div>
             </div>
