--- a/index.html
+++ b/index.html
@@ -1935,9 +1935,9 @@
                     <div class="affiliate-buttons">
                         <a href="https://www.amazon.com/s?k=complete+solar+panel+kit+system&ref=as_li_ss_tl" class="affiliate-btn primary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Amazon')">🛒 Amazon Solar Kits</a>
                         <a href="https://www.renogy.com/solar-panels/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Renogy')">☀️ Renogy</a>
-                        <a href="https://www.ecoflow.com/us/solar-panels" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_EcoFlow')">⚡ EcoFlow</a>
-                        <a href="https://www.jackery.com/collections/solar-panels" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Jackery')">🔋 Jackery</a>
-        </div>
+                        <a href="https://www.amazon.com/s?k=ecoflow+solar+panels&ref=as_li_ss_tl" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_EcoFlow')">⚡ EcoFlow</a>
+                        <a href="https://www.amazon.com/s?k=jackery+solar+panels&ref=as_li_ss_tl" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Solar_Kits_Jackery')">🔋 Jackery</a>
+                    </div>
     </div>
                 
                 <div class="product-feature">
@@ -1951,8 +1951,8 @@
                     <div class="affiliate-buttons">
                         <a href="https://www.amazon.com/s?k=smart+thermostat+nest+honeywell+ecobee&ref=as_li_ss_tl" class="affiliate-btn primary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Amazon')">🛒 Amazon Thermostats</a>
                         <a href="https://www.ecobee.com/smart-thermostats/" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Ecobee')">🏠 Ecobee</a>
-                        <a href="https://www.honeywell.com/en-us/control-systems/smart-thermostats" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Honeywell')">⚙️ Honeywell</a>
-                        <a href="https://www.emerson.com/en-us/sensai-smart-thermostat" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Emerson')">🌡️ Emerson</a>
+                        <a href="https://www.amazon.com/s?k=honeywell+smart+thermostat&ref=as_li_ss_tl" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Honeywell')">⚙️ Honeywell</a>
+                        <a href="https://www.amazon.com/s?k=emerson+sensai+smart+thermostat&ref=as_li_ss_tl" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Thermostats_Emerson')">🌡️ Emerson</a>
                     </div>
                 </div>
                 
@@ -1967,7 +1967,7 @@
                     <div class="affiliate-buttons">
                         <a href="https://www.amazon.com/s?k=home+energy+monitor+smart+meter&ref=as_li_ss_tl" class="affiliate-btn primary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Amazon')">🛒 Amazon Monitors</a>
                         <a href="https://sense.com/products/sense-energy-monitor" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Sense')">📊 Sense</a>
-                        <a href="https://www.emporiaenergy.com/products/vue-2-energy-monitor" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Emporia')">⚡ Emporia</a>
+                        <a href="https://www.amazon.com/s?k=emporia+energy+monitor&ref=as_li_ss_tl" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_Emporia')">⚡ Emporia</a>
                         <a href="https://www.p3international.com/products/p4400.html" class="affiliate-btn secondary" target="_blank" rel="noopener" onclick="if(typeof trackAffiliateClick==='function')trackAffiliateClick('Monitors_KillAWatt')">🔍 Kill-A-Watt</a>
                     </div>
                 </div>
