--- a/index.html
+++ b/index.html
@@ -1838,6 +1838,17 @@
                 font-size: 2.5rem;
             }
         }
+        
+        /* Animations */
+        @keyframes fadeInUp { from { opacity: 0; transform: translateY(40px);} to { opacity: 1; transform: none; } }
+        @keyframes popIn { from { opacity: 0; transform: scale(0.9);} to { opacity: 1; transform: scale(1);} }
+        .animate-fadeInUp { opacity: 0; }
+        .animate-popIn { opacity: 0; }
+        .revealed { opacity: 1 !important; animation-fill-mode: both !important; }
+        .btn, .cta-button, button, .blog-link { transition: background 0.25s cubic-bezier(.48,.22,.34,1.16), transform 0.25s cubic-bezier(.48,.22,.34,1.16); }
+        .btn:active, .cta-button:active, button:active, .blog-link:active { transform: scale(0.97); }
+        .blog-card, .product-feature { transition: box-shadow .45s cubic-bezier(.5,.1,.37,1.29), transform .28s cubic-bezier(.49,.22,.37,1.18); }
+        .blog-card:hover, .product-feature:hover { transform: translateY(-8px) scale(1.03); box-shadow: 0 8px 32px rgba(45,90,39,0.12); }
     </style>
 </head>
 <body>
@@ -2546,6 +2557,24 @@
                 this.reset();
             });
             
+        </script>
+        <script>
+        // Section reveal on scroll
+        document.addEventListener('DOMContentLoaded',function(){
+          let revealEls = document.querySelectorAll('.animate-fadeInUp, .animate-popIn');
+          let observer = new window.IntersectionObserver((entries)=>{
+            entries.forEach(entry=>{
+              if(entry.isIntersecting){
+                entry.target.classList.add('revealed');
+                entry.target.style.animation = entry.target.classList.contains('animate-popIn')
+                  ? 'popIn .6s cubic-bezier(.39,.67,.28,1.53) forwards'
+                  : 'fadeInUp .75s cubic-bezier(.48,.22,.34,1.16) forwards';
+                observer.unobserve(entry.target);
+              }
+            })
+          },{ threshold:.35 });
+          revealEls.forEach(el=>observer.observe(el));
+        });
         </script>
 </body>
 </html>
