--- a/index.html
+++ b/index.html
@@ -2611,6 +2611,15 @@
                 </article>
                 
                 <article class="blog-card">
+                    <div class="blog-image" aria-label="Fast fashion carbon footprint"><span>👕🌍</span></div>
+                    <div class="blog-content">
+                        <h3>Fast Fashion Carbon Footprint: The Shocking Truth</h3>
+                        <p>🚨 <strong>BREAKING:</strong> Fast fashion produces 10% of global CO₂ emissions! Discover how your clothes impact the planet and learn 7 simple ways to reduce your fashion carbon footprint by 60%.</p>
+                        <a href="blog/fast-fashion-carbon-footprint.html" class="blog-link">Read More</a>
+                    </div>
+                </article>
+                
+                <article class="blog-card">
                     <div class="blog-image" aria-label="Carbon footprint guides"><span>📊</span></div>
                     <div class="blog-content">
                         <h3>More Carbon Footprint Guides & Tips</h3>
