Add FlexOffers website verification meta tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="language" content="English">
     <meta name="geo.region" content="US">
     
+    <!-- FlexOffers Verification -->
+    <meta name="fo-verify" content="79862e40-22a3-4c41-9d9e-8b9c23b0027" />
+    
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://pagead2.googlesyndication.com">
