--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="geo.region" content="US">
     
     <!-- FlexOffers Verification -->
-    <meta name="fo-verify" content="79862e40-22a3-4c41-9d9e-8b9c23b0027" />
+    <meta name="fo-verify" content="79862e40-22a3-4c41-9d9e-8b9c23b002a7" />
     
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://www.googletagmanager.com">
