Google Ads compliance: remove Skimlinks from all pages, update Privacy Policy affiliate section, add affiliate disclosure to homepage footer

--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,7 @@
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5918874419248577" crossorigin="anonymous"></script>
     
-    <!-- Skimlinks -->
-    <script type="text/javascript" src="https://s.skimresources.com/js/293633X1780866.skimlinks.js"></script>
+    <!-- Skimlinks REMOVED - Application rejected -->
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F4GP5ZEMD1"></script>
