--- a/index.html
+++ b/index.html
@@ -2746,6 +2746,11 @@
                 </div>
             </div>
             
+            <!-- Affiliate Disclosure -->
+            <div style="background: rgba(255, 255, 255, 0.1); padding: 1.5rem; border-radius: 10px; margin: 2rem 0; text-align: center; font-size: 0.9rem; color: #ccc;">
+                <p style="margin: 0;"><strong>Affiliate Disclosure:</strong> CarbonChecks participates in affiliate marketing programs, including Amazon Associates (Store ID: skypathwayz-21), FlexOffers, CJ Affiliate, Awin, and direct partnerships with solar and energy-efficient product companies. When you click on affiliate links and make a purchase, we may earn a commission at no additional cost to you. This helps us maintain our free carbon footprint calculator. We only recommend products we believe will help reduce your carbon footprint. <a href="privacy-policy.html" style="color: #4CAF50; text-decoration: underline;">Learn more in our Privacy Policy</a>.</p>
+            </div>
+            
             <div class="footer-bottom">
                 <p>&copy; 2024 CarbonChecks. All rights reserved. | Making climate action accessible to everyone.</p>
             </div>
