--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,8 +14,7 @@
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5918874419248577" crossorigin="anonymous"></script>
     
-    <!-- Skimlinks -->
-    <script type="text/javascript" src="https://s.skimresources.com/js/293633X1780866.skimlinks.js"></script>
+    <!-- Skimlinks REMOVED - Application rejected -->
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F4GP5ZEMD1"></script>
@@ -308,7 +307,8 @@
             <p>We use Google Analytics to analyze website traffic and user behavior. This service may collect information about your use of our website.</p>
 
             <h3>Affiliate Programs</h3>
-            <p>We participate in affiliate marketing programs with Amazon, REI, EnergySage, and Ecobee. When you click on affiliate links, you may be redirected to their websites with tracking parameters.</p>
+            <p>We participate in affiliate marketing programs, including Amazon Associates (Store ID: skypathwayz-21), FlexOffers, CJ Affiliate, Awin, and direct partnerships with solar and energy-efficient product companies. When you click on affiliate links on our website, we may earn a commission at no additional cost to you. These affiliate partnerships help us maintain and improve our free carbon footprint calculator.</p>
+            <p><strong>Affiliate Disclosure:</strong> Some links on CarbonChecks are affiliate links. We only recommend products we believe will help reduce your carbon footprint. Your purchase through our affiliate links supports our mission to provide free environmental tools.</p>
 
             <h2>Data Security</h2>
             <p>We implement appropriate security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet is 100% secure.</p>
