--- a/index.html
+++ b/index.html
@@ -2210,8 +2210,8 @@
                 <nav>
                     <ul class="nav-links">
                         <li><a href="#calculator">Calculator</a></li>
-                        <li><a href="#blog">Articles</a></li>
-                        <li><a href="blog/">Blog</a></li>
+                        <li><a href="#blog">Featured Articles</a></li>
+                        <li><a href="blog/">All Articles</a></li>
                         <li><a href="about-us.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -2222,8 +2222,8 @@
                 </div>
                 <div class="mobile-menu" id="mobileMenu">
                     <a href="#calculator">Calculator</a>
-                    <a href="#blog">Articles</a>
-                    <a href="blog/">Blog</a>
+                    <a href="#blog">Featured Articles</a>
+                    <a href="blog/">All Articles</a>
                     <a href="about-us.html">About</a>
                     <a href="contact.html">Contact</a>
                 </div>
@@ -2599,11 +2599,11 @@
         </div>
     </section>
 
-    <!-- Blog Section -->
+    <!-- Featured Articles Section -->
     <section id="blog" class="blog-section">
         <div class="container">
-            <h2 class="blog-title">Latest Articles</h2>
-            <p class="blog-subtitle">Stay informed with expert insights on climate action and sustainable living</p>
+            <h2 class="blog-title">Featured Articles</h2>
+            <p class="blog-subtitle">Our most popular guides to help you reduce your carbon footprint and save money</p>
             
             <div class="blog-grid">
                 <article class="blog-card">
@@ -2660,17 +2660,10 @@
                     </div>
                 </article>
                 
-                <article class="blog-card">
-                    <div class="blog-image" aria-label="Carbon footprint guides"><span>📊</span></div>
-                    <div class="blog-content">
-                        <h3>More Carbon Footprint Guides & Tips</h3>
-                        <p>Explore our complete collection of carbon footprint guides, calculators, and sustainable living tips to reduce your environmental impact.</p>
-                        <a href="blog/" class="blog-link">View All Articles</a>
-                    </div>
-                </article>
             </div>
             <div style="text-align: center; margin-top: 3rem;">
-                <a href="#calculator" class="cta-button">Start Your Carbon Journey →</a>
+                <a href="blog/" class="cta-button" style="margin-right: 1rem;">View All Articles →</a>
+                <a href="#calculator" class="cta-button" style="background: linear-gradient(135deg, #2196F3, #1976D2);">Calculate My Footprint →</a>
             </div>
         </div>
     </section>
