Add quiz link to homepage navigation and AI chatbot setup guide

--- a/index.html
+++ b/index.html
@@ -2210,6 +2210,7 @@
                 <nav>
                     <ul class="nav-links">
                         <li><a href="#calculator">Calculator</a></li>
+                        <li><a href="carbon-quiz.html">Quiz</a></li>
                         <li><a href="#blog">Featured Articles</a></li>
                         <li><a href="blog/">All Articles</a></li>
                         <li><a href="about-us.html">About</a></li>
@@ -2222,6 +2223,7 @@
                 </div>
                 <div class="mobile-menu" id="mobileMenu">
                     <a href="#calculator">Calculator</a>
+                    <a href="carbon-quiz.html">Quiz</a>
                     <a href="#blog">Featured Articles</a>
                     <a href="blog/">All Articles</a>
                     <a href="about-us.html">About</a>
@@ -2259,6 +2261,7 @@
             </div>
             
             <a href="#calculator" class="cta-button">Calculate My Carbon Footprint →</a>
+            <a href="carbon-quiz.html" class="cta-button" style="margin-left: 1rem; background: linear-gradient(135deg, #2196F3, #1976D2);">🎯 Take Quick Quiz →</a>
             
             <div class="trust-badges">
                 <div class="trust-badge">
