Install FlexOffers Flexlinks auto-conversion script on main pages

--- a/carbon-quiz.html
+++ b/carbon-quiz.html
@@ -531,6 +531,13 @@
         
         updateProgress();
     </script>
+    
+    <!-- FlexOffers Flexlinks - Auto-convert merchant links to affiliate links -->
+    <script>
+    var imported = document.createElement('script');
+    imported.src = 'https://content.flexlinkspro.com/flexlinks_1526240.js';
+    document.head.appendChild(imported);
+    </script>
 </body>
 </html>
 
