--- a/index.html
+++ b/index.html
@@ -3470,6 +3470,13 @@
             }, 'google_translate_element');
           }
         </script>
-        <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">    </script>
+    
+    <!-- FlexOffers Flexlinks - Auto-convert merchant links to affiliate links -->
+    <script>
+    var imported = document.createElement('script');
+    imported.src = 'https://content.flexlinkspro.com/flexlinks_1526240.js';
+    document.head.appendChild(imported);
+    </script>
 </body>
 </html>
